--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sylhet_Tragedy</title>
+  <title>Eat_Healthy</title>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,10 +16,100 @@
   <!-- Google Fonts -->
 
   <!-- css link -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <!-- css link -->
 </head>
 <body>
+<section id="banner">
+  <div class="food_network">
+    <h1> <span>Skip</span> The Diet,Just Eat Healthy with Food Network</h1>
+    <p>Imagine you don't need a diet because we provide a healthy and delicious food for you</p>
+    <a href="#">order food</a>
+  </div>
+  <div class="ban_img">
+    <img  style="width:600px ;"  src="iamges/Group 8450.png" alt="">
+  </div>
+</section>
+
+<!-- about section start -->
+
+<section id="about">
+  <div class="about_image">
+<img src="iamges/Person Image.png" alt="">
+  </div>
+
+  <div class="about_text">
+    <h1>About Me</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, reprehenderit eius? Tempora corrupti, numquam voluptatibus error cum ullam impedit quaerat.
+    </p>
+    <a href="#">contact me</a>
+  </div>
+</section>
+<!-- about section end -->
+
+
+<!-- recipie section start -->
+<section>
+  <div class="recipie_text">
+    <h1>About Me</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis ad illum repellat ipsa amet dolorem qui eligendi dolorum sequi iusto, cupiditate velit quia quidem reprehenderit, sed suscipit repudiandae ab nobis?
+    </p>
+  </div>
+
+<div class="title_img">
+  <div class="title_image_one">
+    <img style="width:550px;"   src="iamges/Project Cover.jpg" alt="">
+    <h1>Recipie Title</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quidem dolor aliquam recusandae sapiente nam dolores, non id. Provident, assumenda.</p>
+  </div>
+
+  <div class="title_image_two">
+    <img style="width:550px;" src="iamges/Project Cover.jpg" alt="">
+    <h1>Recipie Title</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quidem dolor aliquam recusandae sapiente nam dolores, non id. Provident, assumenda.</p>
+  </div>
+</div>
+
+</section>
+<!-- recipie section end -->
+
+<!-- top footer start -->
+<section id="top_footer">
+
+<div class="digit">
+  <div style="margin-right:70px ;" >
+    <h1>700K</h1>
+    <h5>Youtube Subscribers</h5>
+  </div>
+  <div style="margin-right:70px ;">
+    <h1>2.M</h1>
+    <h5>Instagram Followres</h5>
+  </div >
+  <div style="margin-right:70px ;">
+    <h1>100k</h1>
+    <h5>Dribble Shot Likes</h5>
+  </div>
+</div>
+
+</section>
+
+
+<!-- top footer end -->
+
+
+
+<!-- footer part start -->
+<section id="footer">
+  <div class="footer">
+    <h1><span>Eat</span> Fresh</h1>
+    <p> Eat healthy to live healthy</p>
+  </div>
+</section>
+
+
+
+
+<!-- footer part end -->
 
 </body>
 </html>
